@@ -524,7 +524,7 @@
     </div>
 
     <div class="text-center copyright">
-        <p>Copyright &#169; 2017 Insurance Office of America. All rights reserved. Version 1.0</p>
+        <p>Copyright &#169; 2018 Insurance Office of America. All rights reserved. Version 1.0</p>
     </div>
     <script type="text/javascript" src="chosen_v1.6.2/docsupport/multi-select.js"></script>
 
