@@ -530,7 +530,7 @@
     </div>
 
     <div class="text-center copyright">
-        <p>Copyright &#169; 2017 Insurance Office of America. All rights reserved. Version 1.0</p>
+        <p>Copyright &#169; 2018 Insurance Office of America. All rights reserved. Version 1.0</p>
     </div>
     <script type="text/javascript" src="js/tooltip.js"></script>
 
