@@ -1,5 +1,6 @@
 ## 2018-5-30
 • Updated app with updated carrier-search page and edit-agreement page
+• Updated carrier agreement css and edit-agreement
 
 ## 2018-5-25
 • Updated app with updated pages for agreements
